[project]
name = "semantic-search-engine"
version = "1.1.0"
description = "A semantic search engine with REST API, powered by sentence embeddings and FAISS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "get2salam"},
]
keywords = ["semantic-search", "embeddings", "nlp", "faiss", "sentence-transformers", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.21.0",
    "torch>=1.9.0",
    "faiss-cpu>=1.7.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
    "ruff>=0.15.4",
]

[project.urls]
Homepage = "https://github.com/get2salam/semantic-search-improve"
Repository = "https://github.com/get2salam/semantic-search-improve"
Issues = "https://github.com/get2salam/semantic-search-improve/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["semantic_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Redirect pytest tmp dir to a repo-local path to avoid Windows
# "Access Denied" errors when the OS username contains spaces
# (e.g. "Abdul Salam" → C:\...\pytest-of-Abdul Salam fails).
tmp_path_retention_policy = "failed"
# NOTE: `basetemp` cannot be set here (pytest limitation); it must be
# passed via --basetemp CLI flag or a conftest.py hook.  The conftest.py
# in this repo sets it automatically when the default path is unsafe.
